LOG New snapshot from 2013.06.08, add new emulator cores, split cores into subpackages

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libretro-20130317.tar.bz2": bd12f1f23847ea537e32cf2b0a78fb91573f509c
+  libretro-20130608.tar.bz2: fc597d24eef7502560107d44bb858a25ed64d14d
