Use older snapshot for Mupen64 Plus because the current one is broken

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   libretro-20141007.tar.bz2: 52dcd71a8b8a4fd298fa712debf7e4d2097eebd7
+  mupen64plus-libretro-1.git.20140916.tar.xz: 7edf07894ca7b124325ce2eb671a897746dffa67
